data/logs/logs4-30---8UL9_g.txt
base.py:30,20:35:20:__connect:653:8UL9_g -- Created new connection <sqlite3.Connection object at 0x7f51b51e74e0>
base.py:30,20:35:20:_cursor_execute:1311:8UL9_g -- SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1
base.py:30,20:35:20:_cursor_execute:1312:8UL9_g -- ()
base.py:30,20:35:20:_cursor_execute:1311:8UL9_g -- SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1
base.py:30,20:35:20:_cursor_execute:1312:8UL9_g -- ()
base.py:30,20:35:20:checkout:507:8UL9_g -- Connection <sqlite3.Connection object at 0x7f51b51e74e0> checked out from pool
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("files")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'fileId', 'VARCHAR(300)', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (2, 'lastModDate', 'DATETIME', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (3, 'parent_id', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (4, 'isFile', 'BOOLEAN', 0, None, 0)
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("owner")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'name', 'VARCHAR(50)', 0, None, 0)
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("dates")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (2, 'date', 'FLOAT', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (3, 'adds', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (4, 'deletes', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (5, 'bin_width', 'FLOAT', 0, None, 0)
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("closure")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'parent', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (2, 'child', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (4, 'depth', 'INTEGER', 0, None, 0)
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("filename")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (2, 'fileName', 'VARCHAR(600)', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
base.py:30,20:35:20:_execute_context:1205:8UL9_g -- PRAGMA main.table_info("tasks")
base.py:30,20:35:20:_execute_context:1207:8UL9_g -- ()
result.p:30,20:35:20:_init_metadata:809:8UL9_g -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (1, 'path', 'VARCHAR(600)', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (2, 'creds', 'BLOB', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (3, 'fileid', 'VARCHAR(600)', 0, None, 0)
result.p:30,20:35:20:process_rows:1249:8UL9_g -- Row (4, 'userid', 'VARCHAR(600)', 0, None, 0)
base.py:30,20:35:20:_finalize_fairy:684:8UL9_g -- Connection <sqlite3.Connection object at 0x7f51b51e74e0> being returned to pool
base.py:30,20:35:20:_reset:872:8UL9_g -- Connection <sqlite3.Connection object at 0x7f51b51e74e0> rollback-on-return
base.py:30,20:35:20:_close_connection:267:8UL9_g -- Closing connection <sqlite3.Connection object at 0x7f51b51e74e0>
base.py:30,20:35:20:__connect:653:8UL9_g -- Created new connection <sqlite3.Connection object at 0x7f51b51e74e0>
base.py:30,20:35:20:checkout:507:8UL9_g -- Connection <sqlite3.Connection object at 0x7f51b51e74e0> checked out from pool
callback:30,20:35:20:<module>:30:8UL9_g -- DASH CALLBACKS IMPORTED
configlo:30,20:35:20:handle_exception:84:8UL9_g -- Custom Uncaught exception
Traceback (most recent call last):
  File "run.py", line 28, in <module>
    app = create_flask_serv()
  File "/home/henry/pydocs/flaskr/__init__.py", line 16, in create_flask_serv
    register_dashapp(flask_serv)
  File "/home/henry/pydocs/flaskr/dashapp/__init__.py", line 12, in register_dashapp
    from flaskr.dashapp.layout import layout
  File "/home/henry/pydocs/flaskr/dashapp/layout.py", line 66
    ], className="four columns",),
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 60
configlo:30,20:35:20:mp_sendmail:121:8UL9_g -- sending mail
configlo:30,20:35:21:handle_exception:87:8UL9_g -- exiting! from sshook
